--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cream">
+    android:background="@color/cream"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="match_parent"
@@ -20,11 +19,11 @@
             />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
 
         <EditText
@@ -32,76 +31,72 @@
             android:layout_width="250dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:hint="@string/register_label_name"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:textColor="@color/textColor"
             android:drawableStart="@drawable/ic_name"
-            />
+            android:hint="@string/register_label_name"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/Email"
             android:layout_width="250dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:hint="@string/register_label_email"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:textColor="@color/textColor"
             android:drawableStart="@drawable/ic_email"
-            />
+            android:hint="@string/register_label_email"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/Password"
             android:layout_width="250dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:hint="@string/register_label_password"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/textColor"
             android:drawableStart="@drawable/ic_password"
-            />
+            android:hint="@string/register_label_password"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/Confirm_Password"
             android:layout_width="250dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:hint="@string/register_label_confirm_password"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@color/textColor"
             android:drawableStart="@drawable/ic_password"
-            />
+            android:hint="@string/register_label_confirm_password"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <Button
             android:id="@+id/submit_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/textColor"
-            android:background="@drawable/round_button"
-            android:textSize="17sp"
-            android:textStyle="bold"
             android:layout_centerInParent="true"
-            android:layout_marginTop="15dp"
             android:layout_gravity="center"
-            android:text="@string/register_label_submit"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/round_button"
             android:onClick="onSubmitClick"
-            />
+            android:text="@string/register_label_submit"
+            android:textColor="@color/textColor"
+            android:textSize="17sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/goBack_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/textColor"
-            android:background="@drawable/round_button"
-            android:textSize="17sp"
-            android:textStyle="bold"
             android:layout_centerInParent="true"
-            android:layout_marginTop="40dp"
             android:layout_gravity="center"
-            android:text="@string/register_label_go_back"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/round_button"
             android:onClick="onGoBackClick"
-            />
-
-
+            android:text="@string/register_label_go_back"
+            android:textColor="@color/textColor"
+            android:textSize="17sp"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
