--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,12 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:src="@drawable/logo" />
+    <View
+        android:id="@+id/divider"
+        android:layout_width="wrap_content"
+        android:layout_height="3dp"
+        android:background="@color/white" >
+    </View>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,34 +46,54 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <Button
+<!--        <Button-->
+<!--            android:id="@+id/LogIn_Btn"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:background="@drawable/round_button"-->
+<!--            android:text="@string/main_label_login"-->
+<!--            android:textColor="@color/textColor"-->
+<!--            android:textSize="17sp"-->
+<!--            android:textStyle="bold" />-->
+        <com.getpet.components.PrimaryButton
             android:id="@+id/LogIn_Btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/round_button"
             android:text="@string/main_label_login"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
             android:textColor="@color/textColor"
             android:textSize="17sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            />
+
     </LinearLayout>
 
 
-    <Button
+<!--    <Button-->
+<!--        android:id="@+id/register_btn"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        android:background="@drawable/round_button"-->
+<!--        android:text="@string/main_label_click_here_to_register"-->
+<!--        android:textColor="@color/textColor"-->
+<!--        android:textSize="17sp"-->
+<!--        android:textStyle="bold"-->
+<!--        />-->
+    <com.getpet.components.PrimaryButton
         android:id="@+id/register_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/round_button"
         android:text="@string/main_label_click_here_to_register"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"
         android:textColor="@color/textColor"
         android:textSize="17sp"
         android:textStyle="bold"
-
-
         />
-
 </LinearLayout>
