--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -2,22 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#FFFFFF" />
-    <corners android:bottomRightRadius="16dp"
+    <corners
         android:bottomLeftRadius="16dp"
-        android:topRightRadius="16dp"
-        android:topLeftRadius="16dp"/>
-<!--    <padding-->
-<!--        android:right="16dp"-->
-<!--        android:left="16dp"-->
-<!--        android:top="8dp"-->
-<!--        android:bottom="8dp"-->
-<!--        />--><!--    <padding-->
-<!--        android:right="16dp"-->
-<!--        android:left="16dp"-->
-<!--        android:top="8dp"-->
-<!--        android:bottom="8dp"-->
-<!--        />-->
-
-
-
+        android:bottomRightRadius="16dp"
+        android:topLeftRadius="16dp"
+        android:topRightRadius="16dp" />
 </shape>
