--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
         <EditText
             android:id="@+id/EmailText"
-            android:layout_width="250dp"
+            android:layout_width="280dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
             android:drawableStart="@drawable/ic_email"
@@ -34,17 +34,53 @@
             android:textColor="@color/textColor"
             android:textSize="20sp"
             android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/PasswordText"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_gravity="center"
-            android:drawableStart="@drawable/ic_password"
-            android:hint="@string/main_label_password"
-            android:textColor="@color/textColor"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_marginLeft="6dp">
+
+            <!-- Password Field -->
+            <EditText
+                android:id="@+id/PasswordText"
+                android:layout_width="280dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:drawableStart="@drawable/ic_password"
+                android:hint="@string/main_label_password"
+                android:textColor="@color/textColor"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginStart="52dp"
+                />
+
+            <ImageButton
+                android:id="@+id/showPasswordTextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_horizontal"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/main_label_password"
+                android:padding="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="10dp"
+                android:src="@drawable/ic_hide_password"
+                android:onClick="onShowPasswordTextClick"/>
+
+        </RelativeLayout>
+
+
+<!--        <EditText-->
+<!--            android:id="@+id/PasswordText"-->
+<!--            android:layout_width="250dp"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:drawableStart="@drawable/ic_password"-->
+<!--            android:hint="@string/main_label_password"-->
+<!--            android:textColor="@color/textColor"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold" />-->
 
         <com.getpet.components.PrimaryButton
             android:id="@+id/LogIn_Btn"
