--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:id="@+id/divider"
         android:layout_width="wrap_content"
         android:layout_height="3dp"
-        android:background="@color/white"></View>
+        android:background="@color/white" />
 
     <LinearLayout
         android:layout_width="match_parent"
