--- a/app/src/main/res/layout/activity_private_area.xml
+++ b/app/src/main/res/layout/activity_private_area.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/cream"
@@ -73,7 +72,7 @@
         android:layout_margin="10dp"
         android:layout_gravity="center">
     <TextView
-        android:id="@+id/change_a_password"
+        android:id="@+id/change_a_password_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -84,36 +83,83 @@
         android:textStyle="bold">
     </TextView>
 
-    <EditText
-        android:id="@+id/change_email"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:textSize="20sp"
-        android:textColor="@color/textColor"
-        android:ems="13"
-        android:hint="@string/private_area_label_email_filling"
-        android:fontFamily="@font/raleway"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
-        android:drawableStart="@drawable/ic_email">
-    </EditText>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            >
 
-    <EditText
-        android:id="@+id/change_password"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:textSize="20sp"
-        android:textColor="@color/textColor"
-        android:ems="13"
-        android:hint="@string/private_area_label_password_filling"
-        android:fontFamily="@font/raleway"
-        android:drawableStart="@drawable/ic_password"
-        >
-    </EditText>
+            <EditText
+                android:id="@+id/change_password"
+                android:layout_width="280dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:drawableStart="@drawable/ic_password"
+                android:hint="@string/private_area_label_password_filling"
+                android:textColor="@color/textColor"
+                android:fontFamily="@font/raleway"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginStart="6dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/showChangePasswordButton"
+                android:inputType="textPassword"
+                />
+
+            <ImageButton
+                android:id="@+id/showChangePasswordButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_horizontal"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/register_label_show_password"
+                android:padding="8dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/ic_hide_password"
+                android:onClick="onShowPasswordClick"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            >
+
+            <EditText
+                android:id="@+id/change_confirm_password"
+                android:layout_width="280dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:drawableStart="@drawable/ic_password"
+                android:hint="@string/private_area_label_confirm_password"
+                android:textColor="@color/textColor"
+                android:fontFamily="@font/raleway"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginStart="6dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/showChangeConfirmPasswordButton"
+                android:inputType="textPassword"
+                />
+
+            <ImageButton
+                android:id="@+id/showChangeConfirmPasswordButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_horizontal"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/register_label_show_password"
+                android:padding="8dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/ic_hide_password"
+                android:onClick="onShowPasswordClick"/>
+        </RelativeLayout>
 
 
         <com.getpet.components.PrimaryButton
-            android:id="@+id/reset_password_btm"
+            android:id="@+id/reset_password_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
