--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,5 @@
 <resources>
 
     <style name="Theme.GetPet" parent="Theme.AppCompat.Light" />
+<!--    <style name="Theme.GetPet" parent="Theme.MaterialComponents.Light" />-->
 </resources>
