--- a/app/src/main/res/layout/fragment_upload_a_pet.xml
+++ b/app/src/main/res/layout/fragment_upload_a_pet.xml
@@ -7,28 +7,6 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/image_logo_upload"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/logo_pages"
-
-            />
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="wrap_content"
-            android:layout_height="3dp"
-            android:background="@color/white"></View>
-
-    </LinearLayout>
-
-    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -41,7 +19,7 @@
             android:fontFamily="@font/handlee"
             android:text="@string/upload_a_pet_label_title"
             android:textSize="40sp"
-            android:textStyle="bold"></TextView>
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
@@ -145,17 +123,6 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="45dp"
-        android:orientation="vertical">
-
-
         <com.getpet.components.PrimaryButton
             android:id="@+id/upload_pet"
             android:layout_width="wrap_content"
@@ -163,13 +130,6 @@
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:text="@string/upload_a_pet_label_upload_button" />
-
-        <com.getpet.components.PrimaryButton
-            android:id="@+id/go_back_to_map"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/upload_a_pet_go_back_btn" />
 
     </LinearLayout>
 
