--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,11 @@
     android:background="@color/cream"
     android:orientation="vertical">
 
+<!--    <FrameLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:id="@+id/frame_layout"-->
+<!--        />-->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,6 +30,9 @@
             android:background="@color/white" >
         </View>
     </LinearLayout>
+
+
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/main_navhost_frag"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -32,7 +40,9 @@
         android:layout_height="0dp"
         app:defaultNavHost="true"
         android:layout_weight="1"
-        app:navGraph="@navigation/nav_graph_main" />
+        app:navGraph="@navigation/nav_graph_main"/>
+
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -44,5 +54,7 @@
         app:backgroundTint="@color/white"
         app:labelVisibilityMode="labeled"
         />
+
+
 
 </LinearLayout>
